[gd_scene load_steps=12 format=3 uid="uid://cr1i2usq8xhjp"]

[ext_resource type="Script" path="res://Scripts/GameLevelSC/main_level.gd" id="1_xy3vd"]
[ext_resource type="Script" path="res://Scripts/GameLevelSC/player_paddle.gd" id="2_shnv5"]
[ext_resource type="Script" path="res://Scripts/GameLevelSC/HardCPU/cpu_paddle.gd" id="3_wlqpr"]
[ext_resource type="Script" path="res://Scripts/GameLevelSC/ball.gd" id="4_1e3v8"]
[ext_resource type="AudioStream" uid="uid://dk3l1i7scw05c" path="res://Audio/SFXs/click.wav" id="5_r42ii"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5krtu"]
size = Vector2(10, 160)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eok8b"]
size = Vector2(10, 160)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ig3xb"]
size = Vector2(40, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3hdfi"]
size = Vector2(1280, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_66d0f"]
size = Vector2(1280, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1jmnj"]
size = Vector2(64, 720)

[node name="MainLevel" type="Node2D"]
script = ExtResource("1_xy3vd")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="BG" type="ColorRect" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="NET" type="ColorRect" parent="UI"]
layout_mode = 0
offset_left = 630.0
offset_right = 650.0
offset_bottom = 720.0

[node name="PlayerScore" type="Label" parent="UI"]
layout_mode = 0
offset_left = 480.0
offset_right = 560.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CPUScore" type="Label" parent="UI"]
layout_mode = 0
offset_left = 720.0
offset_right = 798.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player" type="StaticBody2D" parent="."]
position = Vector2(80, 360)
collision_mask = 12
script = ExtResource("2_shnv5")

[node name="ColorRect" type="ColorRect" parent="Player"]
anchors_preset = -1
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -80.0
offset_right = 20.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(15, 0)
shape = SubResource("RectangleShape2D_5krtu")

[node name="CPU" type="StaticBody2D" parent="."]
position = Vector2(1200, 360)
collision_layer = 2
collision_mask = 12
script = ExtResource("3_wlqpr")

[node name="ColorRect" type="ColorRect" parent="CPU"]
anchors_preset = -1
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -80.0
offset_right = 20.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CPU"]
position = Vector2(-15, 0)
shape = SubResource("RectangleShape2D_eok8b")

[node name="Ball" type="CharacterBody2D" parent="."]
position = Vector2(640, 360)
collision_layer = 4
collision_mask = 27
script = ExtResource("4_1e3v8")

[node name="ColorRect" type="ColorRect" parent="Ball"]
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("RectangleShape2D_ig3xb")
debug_color = Color(0.505534, 0.578879, 0.0591383, 0.42)

[node name="Walls" type="Node2D" parent="."]

[node name="WallTop" type="StaticBody2D" parent="Walls"]
collision_layer = 8
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/WallTop"]
position = Vector2(640, -32)
shape = SubResource("RectangleShape2D_3hdfi")
debug_color = Color(0.952952, 0.167113, 0.360293, 0.42)

[node name="WallDown" type="StaticBody2D" parent="Walls"]
collision_layer = 8
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/WallDown"]
position = Vector2(640, 744)
shape = SubResource("RectangleShape2D_66d0f")
debug_color = Color(0.952952, 0.167113, 0.360293, 0.42)

[node name="Goals" type="Node2D" parent="."]

[node name="GoalPlayer" type="Area2D" parent="Goals"]
collision_layer = 16
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goals/GoalPlayer"]
position = Vector2(-32, 360)
shape = SubResource("RectangleShape2D_1jmnj")
debug_color = Color(0.748822, 0.304641, 0.862748, 0.42)

[node name="GoalCPU" type="Area2D" parent="Goals"]
collision_layer = 16
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goals/GoalCPU"]
position = Vector2(1312, 360)
shape = SubResource("RectangleShape2D_1jmnj")
debug_color = Color(0.748822, 0.304641, 0.862748, 0.42)

[node name="BallTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="PaddleTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="SFXAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_r42ii")
bus = &"SFX"

[connection signal="body_entered" from="Goals/GoalPlayer" to="." method="_on_goal_player_body_entered"]
[connection signal="body_entered" from="Goals/GoalCPU" to="." method="_on_goal_cpu_body_entered"]
[connection signal="timeout" from="BallTimer" to="." method="_on_ball_timer_timeout"]
[connection signal="timeout" from="PaddleTimer" to="." method="_on_paddle_timer_timeout"]
